k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-ing
spec:
  ingressClassName: traefik
  rules:
    - host: inventory.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventory-svc
                port: { number: 80 }
