k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: inventory-route
spec:
  to:
    kind: Service
    name: inventory-svc
  port:
    targetPort: http
  tls:
    termination: edge
